JO-2008-06-19-0: Bugfix:      Wallclock_Time query should be more constrained
                 Bugster:     6715561
                 Issue:       2620
                 Review:      AP

RD-2008-06-10-1: CVS:         Created V62beta2_TAG
--------------------------------------------------

RD-2008-06-10-0: Bugfix:      reverted RD-2008-06-09-0

JO-2008-06-09-0: Bugfix:      Exception in reporting when running query after running result
                 Bugster:     6712075
                 Review:      RD

RD-2008-06-09-0: Bugfix:      corrected copyright header
                 Review:      JO

JO-2008-05-28-0: RFE:         Arco dbwriter should be uninstallable
                 Bugster:     6661540
                 Review:      LP
                 Cleanup:     Removed dbwriter.sh script

RD-2008-05-05-0: CVS:       Created V62beta_TAG
-----------------------------------------------

AP-2008-05-05-0: Enhancem.:   Adding License agreement to installation scripts

JO-2008-04-30-0: Bugfix:      AdvancedReservationManager needs to include another field as primary key field
                 Bugster:     6691982
                 Review:      JG

AP-2008-04-28-0: Bugfix:      TABLESPACE values should be written to dbwriter.conf
                 Bugster:     6684968
                 Issue:       2566
                 Review:      JO

PJ-2008-04-25-0: Bugfix:      Exception when switching cluster in ARCo GUI
                 Bugster:     6692055
                 Bugfix:      Simple Query builder does not repopulate dropdown menus when cluster changed    
                 Bugster:     6693980
                 Bugfix:      ARCo should not print exception stack trace in the console
                 Bugster:     6694003
                 Issue:       2565
                 Review:      JO

RD-2008-04-21-0: CVS:       Created V62beta_RC2_TAG
---------------------------------------------------

JO-2008-04-17-0: Enhancem.:   o Removed PostgreSQL jdbc driver from distribution